--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.8"
 Pint = "^0.19.2"
+lark-parser = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
